--- a/_portfolio/2017-02-20-compiler.md
+++ b/_portfolio/2017-02-20-compiler.md
@@ -3,16 +3,23 @@ layout: post
 title: "C to MIPS32 Compiler"
 categories: portfolio imperial
 image: /assets/img/language_machine.jpg
+date: 2017-02-20
+permalink: /portfolio/compiler/
 ---
 
+The compiler was made to translate C code to MIPS assembly. It was then tested using
+`qemu` and simulating the MIPS processor to run the binary.
+
 ### What is a compiler?
+
 A Compiler is a program that transforms code written in one language into
 another language. This is normally done to transform a higher level language
 such as C, into a lower level language such as assembly.
 
-![Compiler Workflow]({{ site.url }}/assets/dot/compiler_flow.svg)
+![Compiler Workflow]({{ site.url }}/assets/img/compiler_flow.svg)
 
 ### Project
+
 The project was separated into three parts: lexer, parser and the actual
 compiler. The lexer was written in [flex][flex_main], which then got passed to the parser
 that we wrote in [bison][bison_main]. The AST ([Abstract Syntax Tree][wiki-AST]) that was
