Fixing links in blog

--- a/_portfolio/2017-02-20-compiler.md
+++ b/_portfolio/2017-02-20-compiler.md
@@ -17,7 +17,7 @@ A Compiler is a program that transforms code written in one language into
 another language. This is normally done to transform a higher level language
 such as C, into a lower level language such as assembly.
 
-![Compiler Workflow]({{ assets/img/compiler_flow.svg | prepend: site.baseurl}})
+![Compiler Workflow](/assets/img/compiler_flow.svg)
 
 ### Project
 
