--- a/_portfolio/2017-02-20-compiler.md
+++ b/_portfolio/2017-02-20-compiler.md
@@ -3,9 +3,9 @@ layout: post
 title: "C to MIPS32 Compiler"
 categories: portfolio imperial
 image: assets/img/compiler.jpg
-date: 2017-02-20
 github: Compiler
 permalink: /portfolio/compiler/
+front: true
 ---
 
 The compiler was made to translate C code to MIPS assembly. It was then tested using
