--- a/_portfolio/2018-01-20-yage.md
+++ b/_portfolio/2018-01-20-yage.md
@@ -2,10 +2,10 @@
 layout: post
 title: YAGE
 categories: portfolio game-engine
-date: 2018-01-20
 image: assets/img/yage.jpg
 github: YAGE
 permalink: /portfolio/yage/
+front: true
 ---
 
 YAGE is a fully featured 2D game engine written in C++ using OpenGL to render
