--- a/_portfolio/2018-03-23-fmark.md
+++ b/_portfolio/2018-03-23-fmark.md
@@ -3,9 +3,9 @@ layout: post
 title: FMark
 categories: portfolio imperial
 image: assets/img/fmark.jpg
-date: 2018-3-23
 github: FMark
 permalink: /portfolio/fmark/
+front: true
 ---
 
 FMark is a markdown parser that features many extensions to
