--- a/_portfolio/2017-02-20-compiler.md
+++ b/_portfolio/2017-02-20-compiler.md
@@ -2,7 +2,7 @@
 layout: post
 title: "C to MIPS32 Compiler"
 categories: portfolio imperial
-image: assets/img/compiler.jpg
+image: /assets/img/compiler.jpg
 github: Compiler
 permalink: /portfolio/compiler/
 front: true
