--- a/_portfolio/2018-01-20-yage.md
+++ b/_portfolio/2018-01-20-yage.md
@@ -2,7 +2,7 @@
 layout: post
 title: YAGE
 categories: portfolio game-engine
-image: assets/img/yage.jpg
+image: /assets/img/yage.jpg
 github: YAGE
 permalink: /portfolio/yage/
 front: true
