--- a/_portfolio/2018-03-23-fmark.md
+++ b/_portfolio/2018-03-23-fmark.md
@@ -2,7 +2,7 @@
 layout: post
 title: FMark
 categories: portfolio imperial
-image: assets/img/fmark.jpg
+image: /assets/img/fmark.jpg
 github: FMark
 permalink: /portfolio/fmark/
 front: true
