--- a/_portfolio/2018-03-23-fmark.md
+++ b/_portfolio/2018-03-23-fmark.md
@@ -10,7 +10,8 @@ front: true
 
 FMark is a markdown parser that features many extensions to
 [GFM](https://github.github.com/gfm/) (Github Flavoured Markdown), such as
-macros, spread sheet functionality, and more extensions described below.
+macros, spread sheet functionality, and more extensions described below. It was
+written in a test driven manner, using purely functional F#.
 
 ## Introduction
 
